--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>mi carpeta git</h1>
 
-    <p>PRIMER CAMBIO REALIZADO Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias ut itaque quibusdam fugiat dolore assumenda nulla nam aliquam dolor ratione iste mollitia neque odio, blanditiis beatae, eius modi, repellendus nobis quaerat voluptatum pariatur vitae sapiente eligendi quos? Provident, maxime, placeat qui quaerat mollitia ab totam quas illum quo aliquid ex beatae aliquam, voluptatem optio eius?</p>
+    <p>PRIMER CAMBIO REALIZADO Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias ut itaque quibusdam fugiat dolore assumenda nulla nam aliquam dolor ratione iste mollitia neque odio, blanditiis beatae, eius modi, repellendus nobis quaerat voluptatum pariatur vitae sapiente eligendi quos? Provident, maxime, placeat qui quaerat mollitia ab totam quas illum quo aliquid ex beatae aliquam, voluptatem optio eius? SEGUNDO CAMBIO</p>
 
     <footer>
         drechos reservados
